# haste

./: CMakeLists.txt
include/haste/app/: tracking.hpp
include/haste/app/gui/: gui.hpp
include/haste/aux/: aux.hpp
include/haste/core/: event_window.hpp  interpolator.hpp  interpolator_impl.hpp  patch.hpp
include/haste/io/: rpg_dataset.hpp  rpg_dataset_impl.hpp
include/haste/tracking/: correlation_tracker.hpp  correlation_tracker_impl.hpp  haste_correlation_star_tracker.hpp  haste_correlation_tracker.hpp  haste_correlation_tracker_impl.hpp  haste_difference_star_tracker.hpp  haste_difference_star_tracker_impl.hpp  haste_difference_tracker.hpp  haste_difference_tracker_impl.hpp  hypothesis_tracker.hpp
